substituted platform thread to visual thread in socket handler